update portfolio layout and fix spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -11796,10 +11796,10 @@ section#contact form#contactForm :-ms-input-placeholder {
 }
 
 .deskripsi {
-  border: 1px solid #ccc;
+  /* border: 1px solid #ccc; */
   border-width: 1px 0;
   /* list-style:none; */
-  margin: 0;
+  margin: 30px;
   padding: 0;
   text-align: center;
 }
